# lca_onnx

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  wheels.yml
docs/: conf.py
tests/: test_package.py
